force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/Form_LCF_Grant_Annual_Block_1__c.object-meta.xml
<CustomObject>
    <description>Life Chances Fund Grant Management - Annual Monitoring - 1.0</description>
    <label>Form LCF Grant Annual Block 1.0</label>
    <nameField>
        <displayFormat>GAM-{00000}</displayFormat>
        <label>Block ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LCF Grant Annual Monitoring</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>