force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/am_approval_status__c.field-meta.xml
<CustomField>
    <fullName>am_approval_status__c</fullName>
    <description>Approval status of block</description>
    <inlineHelpText>Approval status of block</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grant_Form_Approval_Status</valueSetName>
    </valueSet>
</CustomField>