force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/am_end_of_grant__c.field-meta.xml
<CustomField>
    <fullName>am_end_of_grant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Additional information will be required if this is the final year of the grant</description>
    <inlineHelpText>Please tick here if this is the final year of the grant</inlineHelpText>
    <label>End of Grant Block Required</label>
    <type>Checkbox</type>
</CustomField>