force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/am_year_end__c.field-meta.xml
<CustomField>
    <fullName>am_year_end__c</fullName>
    <inlineHelpText>Financial year end date</inlineHelpText>
    <label>Financial Year End</label>
    <type>Date</type>
</CustomField>