force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/am_year_end_string__c.field-meta.xml
<CustomField>
    <fullName>am_year_end_string__c</fullName>
    <formula>&#39;Year ending &#39;+RIGHT(TEXT(am_year_end__c), 2)+"/"+MID(TEXT(am_year_end__c), 6, 2)+"/"+LEFT(TEXT(am_year_end__c), 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Financial year end</inlineHelpText>
    <label>Financial Year End String</label>
    <type>Text</type>
</CustomField>