force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/ar_current_population__c.field-meta.xml
<CustomField>
    <fullName>ar_current_population__c</fullName>
    <inlineHelpText>What is the current population?</inlineHelpText>
    <label>AR - Current Population</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>