force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/ar_no_outcome_achieved__c.field-meta.xml
<CustomField>
    <fullName>ar_no_outcome_achieved__c</fullName>
    <inlineHelpText>Over the past year, how many participants engaged in the program did not achieve a payable outcome?</inlineHelpText>
    <label>AR - No Outcome Achieved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>