force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/ar_service_users_changed__c.field-meta.xml
<CustomField>
    <fullName>ar_service_users_changed__c</fullName>
    <inlineHelpText>Over the past year, has the service user population you draw the cohort from changed?</inlineHelpText>
    <label>AR - Service Users Changed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>