force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/cs_any_local_community_savings__c.field-meta.xml
<CustomField>
    <fullName>cs_any_local_community_savings__c</fullName>
    <inlineHelpText>Have there been any other cashable savings or costs avoided to other local commissioners and the local community?</inlineHelpText>
    <label>CS - Any Local Community Savings?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>