force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/cs_cashable_savings_national__c.field-meta.xml
<CustomField>
    <fullName>cs_cashable_savings_national__c</fullName>
    <inlineHelpText>Cashable savings</inlineHelpText>
    <label>CS - Cashable Savings - National</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>