force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/cs_costs_avoided_national__c.field-meta.xml
<CustomField>
    <fullName>cs_costs_avoided_national__c</fullName>
    <inlineHelpText>Costs avoided</inlineHelpText>
    <label>CS - Costs Avoided - National</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>