force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/cs_how_calculated_local__c.field-meta.xml
<CustomField>
    <fullName>cs_how_calculated_local__c</fullName>
    <inlineHelpText>Please describe how you calculated these figures</inlineHelpText>
    <label>CS - How Calculated - Local</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>