force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/de_declaration__c.field-meta.xml
<CustomField>
    <fullName>de_declaration__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Confirmed</inlineHelpText>
    <label>DE - Declaration</label>
    <type>Checkbox</type>
</CustomField>