force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/de_name__c.field-meta.xml
<CustomField>
    <fullName>de_name__c</fullName>
    <description>Page Title:Primary lead contact</description>
    <inlineHelpText>Name</inlineHelpText>
    <label>DE - Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>