force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/eg_payment_history_count__c.field-meta.xml
<CustomField>
    <fullName>eg_payment_history_count__c</fullName>
    <description>Count of end of grant payment history records</description>
    <inlineHelpText>Count of end of grant payment history records</inlineHelpText>
    <label>EG - Payment History Count</label>
    <summaryForeignKey>Form_LCF_Grant_Payment_History_1__c.lcf_grant_annual_block__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>