force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/eg_section_status__c.field-meta.xml
<CustomField>
    <fullName>eg_section_status__c</fullName>
    <description>End of Grant Section Status</description>
    <label>EG - Section Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Form_Section_Status</valueSetName>
    </valueSet>
</CustomField>