force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/eg_total_actual_lcf_funding__c.field-meta.xml
<CustomField>
    <fullName>eg_total_actual_lcf_funding__c</fullName>
    <description>Total end of grant actual LCF funding</description>
    <inlineHelpText>Total end of grant actual LCF funding</inlineHelpText>
    <label>EG - Total Actual LCF Funding</label>
    <summarizedField>Form_LCF_Grant_Payment_History_1__c.ph_actual_lcf_funding__c</summarizedField>
    <summaryForeignKey>Form_LCF_Grant_Payment_History_1__c.lcf_grant_annual_block__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>