force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/Form_Complete__c.field-meta.xml
<CustomField>
    <fullName>Form_Complete__c</fullName>
    <formula>AND(
ISPICKVAL(ar_section_status__c, &#39;COMPLETE&#39;), 
ISPICKVAL(ve_section_status__c, &#39;COMPLETE&#39;), 
ISPICKVAL(cs_section_status__c, &#39;COMPLETE&#39;), 
ISPICKVAL(sf_section_status__c, &#39;COMPLETE&#39;), 
ISPICKVAL(sc_section_status__c, &#39;COMPLETE&#39;),
ISPICKVAL(de_section_status__c, &#39;COMPLETE&#39;),
IF(am_end_of_grant__c, ISPICKVAL(eg_section_status__c, &#39;COMPLETE&#39;), true)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Form complete?</inlineHelpText>
    <label>Form Complete</label>
    <type>Checkbox</type>
</CustomField>