force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reviewer/approver of this grant block (defaults to grant owner)</description>
    <inlineHelpText>Reviewer/approver of this grant block (defaults to grant owner)</inlineHelpText>
    <label>Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Form_LCF_Annual_Blocks</relationshipName>
    <type>Lookup</type>
</CustomField>