force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/sc_actual_performance_mgmt_cost__c.field-meta.xml
<CustomField>
    <fullName>sc_actual_performance_mgmt_cost__c</fullName>
    <inlineHelpText>What was the actual cost of SIB performance management over the past project year?</inlineHelpText>
    <label>SC - Actual Performance Mgmt Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>