force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/sc_actual_service_delivery_costs__c.field-meta.xml
<CustomField>
    <fullName>sc_actual_service_delivery_costs__c</fullName>
    <inlineHelpText>What were the actual service delivery costs over the past year?</inlineHelpText>
    <label>SC - Actual Service Delivery Costs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>