force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/sc_actual_social_investment_cost__c.field-meta.xml
<CustomField>
    <fullName>sc_actual_social_investment_cost__c</fullName>
    <description>Including return, admin fees and legal fees.</description>
    <inlineHelpText>What was the actual cost of social investment leveraged over the past year?</inlineHelpText>
    <label>SC - Actual Social Investment Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>