force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/sc_anticipated_performance_mgmt_cost__c.field-meta.xml
<CustomField>
    <fullName>sc_anticipated_performance_mgmt_cost__c</fullName>
    <description>Including outcome data analysis, contract management, SIB management, SIB governance, SPV costs, SIB board meetings, SIB oversight of provider performance.</description>
    <inlineHelpText>What was the anticipated cost of SIB performance management over the past year?</inlineHelpText>
    <label>SC - Anticipated Performance Mgmt Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>