force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/sc_anticipated_return_on_social_invest__c.field-meta.xml
<CustomField>
    <fullName>sc_anticipated_return_on_social_invest__c</fullName>
    <inlineHelpText>What is the anticipated rate of return on social investment based on current performance?</inlineHelpText>
    <label>SC - Anticipated Return on Social Invest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>