force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/sc_anticipated_service_delivery_costs__c.field-meta.xml
<CustomField>
    <fullName>sc_anticipated_service_delivery_costs__c</fullName>
    <description>Including management of delivery and collection of outcomes data</description>
    <inlineHelpText>What were the anticipated service delivery costs over the past year?</inlineHelpText>
    <label>SC - Anticipated Service Delivery Costs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>