force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/sc_evaluation_and_learning_costs__c.field-meta.xml
<CustomField>
    <fullName>sc_evaluation_and_learning_costs__c</fullName>
    <inlineHelpText>What was the total amount spent on evaluation and learning over the past year?</inlineHelpText>
    <label>SC - Evaluation and Learning Costs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>