force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/sc_funds_flow_files__c.field-meta.xml
<CustomField>
    <fullName>sc_funds_flow_files__c</fullName>
    <inlineHelpText>Please upload a revised funds flow</inlineHelpText>
    <label>SC - Funds Flow Files</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>