force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/sc_funds_flow_revised__c.field-meta.xml
<CustomField>
    <fullName>sc_funds_flow_revised__c</fullName>
    <inlineHelpText>Have you revised the funds flow you sent to us in your final application?</inlineHelpText>
    <label>SC - Funds Flow Revised?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>