force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/sc_lcf_grant_money_multiple__c.field-meta.xml
<CustomField>
    <fullName>sc_lcf_grant_money_multiple__c</fullName>
    <defaultValue>"1:XXX"</defaultValue>
    <description>This should be a ratio of initial investment capital raised to payment to investors, including investment capital and investment costs.</description>
    <inlineHelpText>What is the anticipated end of LCF grant money multiple based on current performance?</inlineHelpText>
    <label>SC - LCF Grant Money Multiple</label>
    <length>8</length>
    <type>Text</type>
</CustomField>