force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/sc_payment_profile_files__c.field-meta.xml
<CustomField>
    <fullName>sc_payment_profile_files__c</fullName>
    <inlineHelpText>Please upload a suggested revised payment profile</inlineHelpText>
    <label>SC - Payment Profile Files</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>