force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/sc_revised_payment_profile_required__c.field-meta.xml
<CustomField>
    <fullName>sc_revised_payment_profile_required__c</fullName>
    <inlineHelpText>In light of the information given in this form do your consider you need to revise your payment profile?</inlineHelpText>
    <label>SC - Revised Payment Profile Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>