force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/sf_additional_social_investment__c.field-meta.xml
<CustomField>
    <fullName>sf_additional_social_investment__c</fullName>
    <inlineHelpText>Social investment above and beyond start up investment</inlineHelpText>
    <label>SF - Additional Social Investment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>