force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/SF_Any_Other__c.field-meta.xml
<CustomField>
    <fullName>SF_Any_Other__c</fullName>
    <inlineHelpText>Any other?</inlineHelpText>
    <label>SF - Any Other?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>