force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/sf_fixed_rate_loans_received__c.field-meta.xml
<CustomField>
    <fullName>sf_fixed_rate_loans_received__c</fullName>
    <inlineHelpText>Fixed rate loans</inlineHelpText>
    <label>SF - Fixed Rate Loans Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>