force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/sf_grants_received__c.field-meta.xml
<CustomField>
    <fullName>sf_grants_received__c</fullName>
    <inlineHelpText>Grants</inlineHelpText>
    <label>SF - Grants Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>