force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/sf_lcf_outcome_payments_received__c.field-meta.xml
<CustomField>
    <fullName>sf_lcf_outcome_payments_received__c</fullName>
    <description>Page Title:What were the total outcomes payments received in the past year?</description>
    <inlineHelpText>From Life Chances Fund</inlineHelpText>
    <label>SF - LCF Outcome Payments Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>