force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/sf_non_outcome_funding__c.field-meta.xml
<CustomField>
    <fullName>sf_non_outcome_funding__c</fullName>
    <inlineHelpText>Non outcome-based block funding or fee for service</inlineHelpText>
    <label>SF - Non Outcome Funding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>