force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/sf_other_funding_details__c.field-meta.xml
<CustomField>
    <fullName>sf_other_funding_details__c</fullName>
    <inlineHelpText>Briefly describe the source and whether it is outcome based</inlineHelpText>
    <label>SF - Other Funding Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>