force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/sf_other_outcome_payments_received__c.field-meta.xml
<CustomField>
    <fullName>sf_other_outcome_payments_received__c</fullName>
    <inlineHelpText>From other commissioners</inlineHelpText>
    <label>SF - Other Outcome Payments Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>