force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/sf_section_status__c.field-meta.xml
<CustomField>
    <fullName>sf_section_status__c</fullName>
    <label>SF - Section Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Form_Section_Status</valueSetName>
    </valueSet>
</CustomField>