force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/sf_social_investment_received__c.field-meta.xml
<CustomField>
    <fullName>sf_social_investment_received__c</fullName>
    <inlineHelpText>Social investment to start up the SIB</inlineHelpText>
    <label>SF - Social Investment Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>