force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/ve_any_other_engagements__c.field-meta.xml
<CustomField>
    <fullName>ve_any_other_engagements__c</fullName>
    <description>For example, sharing learning locally or including VCSEs in project delivery activity.</description>
    <inlineHelpText>Have you had any other engagements with the VCSE sector over the past year?</inlineHelpText>
    <label>VE - Any Other Engagements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>