force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/ve_future_engagement__c.field-meta.xml
<CustomField>
    <fullName>ve_future_engagement__c</fullName>
    <inlineHelpText>How do you propose to engage with the VCSE sector in future?</inlineHelpText>
    <label>VE - Future Engagement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>