force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/ve_management_roles__c.field-meta.xml
<CustomField>
    <fullName>ve_management_roles__c</fullName>
    <description>If there are no individuals occupying roles, please put ‘0’.</description>
    <inlineHelpText>How many individuals representing VCSE organisations currently occupy SIB management roles?</inlineHelpText>
    <label>VE - Management Roles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>