force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/ve_organisations_involved__c.field-meta.xml
<CustomField>
    <fullName>ve_organisations_involved__c</fullName>
    <description>If there are no VCSE organisations involved, please put ‘0’.</description>
    <inlineHelpText>How many VCSE organisations are currently involved in delivering services within your SIB?</inlineHelpText>
    <label>VE - Organisations Involved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>