force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/ve_other_engagement_details__c.field-meta.xml
<CustomField>
    <fullName>ve_other_engagement_details__c</fullName>
    <inlineHelpText>Briefly describe these engagements and what the outcomes were</inlineHelpText>
    <label>VE - Other Engagement Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>