force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/ve_other_engagements__c.field-meta.xml
<CustomField>
    <fullName>ve_other_engagements__c</fullName>
    <inlineHelpText>How many VCSE organisations were involved in these engagements?</inlineHelpText>
    <label>VE - Other Engagements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>