force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/fields/ve_technical_support__c.field-meta.xml
<CustomField>
    <fullName>ve_technical_support__c</fullName>
    <description>If there were no individuals providing support, please put ‘0’.</description>
    <inlineHelpText>How many individuals representing VCSE organisations have provided technical support over the past year?</inlineHelpText>
    <label>VE - Technical Support</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>