force-app/main/default/objects/Form_LCF_Grant_Annual_Block_1__c/listViews/Approved.listView-meta.xml
<ListView>
    <fullName>Approved</fullName>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>am_year_end__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Reviewer__c</columns>
    <columns>Form_Complete__c</columns>
    <columns>am_approval_status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>am_approval_status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved</label>
</ListView>